<?xml version="1.0"?>
<package format="2">
  <name>maxon_epos4_ros_canopen</name>
  <version>1.0.0</version>
  <description>The maxon_epos4_ros_canopen package is a configuration package for using maxon EPOS4 with ros_canopen</description>

  <author email="cyril.jourdan@roboprotos.com">Cyril Jourdan</author>
  <maintainer email="cyril.jourdan@roboprotos.com">Cyril Jourdan</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/maxon_epos4_ros_canopen</url>
  <url type="repository">https://github.com/roboprotos/maxon_epos4_ros1</url>
  <url type="bugtracker">https://github.com/roboprotos/maxon_epos4_ros1/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
